@@ -1,5 +1,5 @@
 #Eclipse messages class
-#Sun Jul 06 17:22:40 EEST 2014
+#Sun Jul 06 17:32:00 EEST 2014
 FileChooser.acceptAllFileFilterText=All Files
 FileChooser.cancelButtonText=Cancel
 FileChooser.cancelButtonToolTipText=
@@ -24,8 +24,8 @@ html.add-participant=<html>Add </br>Participant...</html>
 html.choose-participant=<html>Choose from<br/>participants list...</html>
 html.modify-participant=<html>Modify <br/>Participant...</html>
 lbl.APPLICATION=APPLICATION
-lbl.CHOOSE-PARTICIPANT=CHOOSE PARTICIPANT
-lbl.CHOOSE-TEST=CHOOSE TEST
+lbl.CHOOSE-PARTICIPANT=PARTICIPANT SELECTION
+lbl.CHOOSE-TEST=TEST SELECTION
 lbl.TEST=TEST
 lbl.add=Add
 lbl.add-modify=Manage...
@@ -104,6 +104,7 @@ msg.downloading-update-list=Downloading update list. Please wait...
 msg.downloading-updates-finished=Done downloading updates
 msg.how-many-random-participants=The current data file is empty. Please specify how many randomly generated participants would you like to add (max {0})
 msg.name-cannot-be-empty=Please specify participant name
+msg.no-participant-selected=No participant was selected
 msg.participant-was-changed=Participant {0} was modified.\nWould you like to save the changes?
 msg.please-choose-participant=Please choose a participant
 msg.please-choose-test=Please choose a test from the menu
